[tool.poetry]
name = "andyhoang-github-io"
version = "0.1.0"
description = "My person blog"
authors = ["Andy Hoang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "==1.4.2"
mkdocs-awesome-pages-plugin = "==2.8.0"
mkdocs-encryptcontent-plugin = "==2.4.5"
mkdocs-git-revision-date-localized-plugin = "==1.1.0"
mkdocs-material = "==9.0.15"
mkdocs-material-extensions = "==1.1.1"


[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
